Fix all compilation errors and implement missing functionality
Co-authored-by: Galluno <7397855+Galluno@users.noreply.github.com>